Fix z-index problem

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header {
 main {
     background-color: #e2e8f0;
     grid-area: main;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 /* ---------------- Sidenav ---------------- */
